Fixed too long price on cart

--- a/app/static/styles/user/information.css
+++ b/app/static/styles/user/information.css
@@ -44,11 +44,11 @@
 
 .form_label{
     font-weight: bold;
-    font-size:25px;
+    font-size:20px;
 }
 
 .form_input{
-    font-size: 25px;
+    font-size: 20px;
     outline: none;
 }
 
